<resources>
    <string name="app_name">Dice Roller</string>
    <string name="menu_dice">Dice</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_numbers">Numbers</string>
    <string name="menu_alphabet">Alphabet</string>
    <string name="menu_words">Words</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    
    <string name="action_roll">Roll Dice</string>
    <string name="action_pick">Pick Cards</string>
    <string name="action_generate">Generate Numbers</string>
    <string name="action_alphabet">Generate Letters</string>
    <string name="action_words">Generate Words</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!-- Settings -->
    <string name="pref_animation_duration">pref_animation_duration</string>
    <string name="pref_animation_duration_title">Animation Duration</string>
    <string name="pref_animation_duration_summary">Duration of animations</string>
    <string name="pref_dark_mode">pref_dark_mode</string>
    <string name="pref_dark_mode_title">Dark Mode</string>
    <string name="pref_sound">pref_sound</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_vibration">pref_vibration</string>
    <string name="pref_vibration_title">Vibration</string>
    <string name="pref_default_dice">pref_default_dice</string>
    <string name="pref_default_dice_title">Default Dice Count</string>
    <string name="pref_default_cards">pref_default_cards</string>
    <string name="pref_default_cards_title">Default Cards Count</string>
    <string name="pref_default_numbers">pref_default_numbers</string>
    <string name="pref_default_numbers_title">Default Numbers Count</string>
    <string name="pref_default_alphabet">pref_default_alphabet</string>
    <string name="pref_default_alphabet_title">Default Alphabet Count</string>
    <string name="pref_default_words">pref_default_words</string>
    <string name="pref_default_words_title">Default Words Count</string>

    <string name="about_description">A versatile application for rolling dice, drawing cards, and generating random numbers. Built with Material Design and Java.</string>
    <string name="about_developer">Developed by Developer Placeholder</string>
    <string name="about_copyright">© 2026 Dice Roller App</string>
    <string name="app_version">Version 1.0</string>

    <string name="help_content">How to roll dice:\nGo to the Dice tab, adjust the number of dice, and press "Roll Dice".\n\nHow to pick cards:\nGo to the Cards tab, set the number of cards, and press "Pick Cards".\n\nHow to generate random numbers:\nGo to the Numbers tab, set how many numbers you need, and press "Random Number".\n\nSettings:\nYou can adjust animation duration, enable sound/vibration, and set default counts in the Settings menu.</string>
    
    <string-array name="animation_durations">
        <item>1 Second</item>
        <item>2 Seconds</item>
        <item>3 Seconds</item>
    </string-array>
    
    <string-array name="animation_duration_values">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
    </string-array>
</resources>
