<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dice"
            android:title="@string/menu_dice" />
        <item
            android:id="@+id/nav_cards"
            android:title="@string/menu_cards" />
        <item
            android:id="@+id/nav_numbers"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_numbers" />
        <item
            android:id="@+id/nav_alphabet"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/menu_alphabet" />
        <item
            android:id="@+id/nav_words"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_words" />
    </group>
    
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
